# swap-anything

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
docs/: getting-started.md  index.md
docs/about/: developer-guide.md
docs/api-reference/swapanything/: index.md  select.md
docs/api-reference/swapanything/backend/: airtable.md  simple.md
docs/how-to/: index.md
docs/stylesheets/: extra.css
src/swapanything/: __about__.py  cli.py  prep.py  select.py
src/swapanything/backend/: __init__.py  _base.py  airtable.py  simple.py
src/swapanything_backend/: __init__.py  _base.py  airtable.py
tests/unit_test/data/: availabilities_records.json  exclusions_records.json  faker_availabilities.csv  faker_exclusions.csv  faker_subjects.csv  subjects_records.json
tests/unit_test/swapanything_backend_test/: conftest.py  test__base.py  test_airtable.py
tests/unit_test/swapanything_test/: conftest.py  test_base.py  test_large_data.py  test_prep.py  test_select.py
tests/unit_test/swapanything_test/backend/: test__base.py  test_airtable.py  test_simple.py
